--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -64,6 +64,8 @@ add_example(client_connect_loop client_connect_loop.c)
 
 add_example(server_mainloop server_mainloop.c)
 
+add_example(client_async client_async.c)
+
 add_example(server_instantiation server_instantiation.c)
 
 add_example(server_repeated_job server_repeated_job.c)
