--- a/include/ua_config.h.in
+++ b/include/ua_config.h.in
@@ -26,7 +26,7 @@ extern "C" {
 #cmakedefine UA_ENABLE_NODEMANAGEMENT
 #cmakedefine UA_ENABLE_SUBSCRIPTIONS
 #cmakedefine UA_ENABLE_MULTITHREADING
-
+#cmakedefine UA_ENABLE_ASYNC_CLIENT_API
 /**
  * Advanced Options
  * ---------------- */
